--- a/app/src/main/res/drawable/shape_button_22dp_gray55.xml
+++ b/app/src/main/res/drawable/shape_button_22dp_gray55.xml
@@ -3,7 +3,7 @@
     <!-- Основной фон с цветом и скругленными углами -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/Gray_56" />  <!-- Установить цвет -->
+            <solid android:color="@color/Gray_55" />
             <corners android:radius="22dp" />
         </shape>
     </item>
