--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,5 +78,19 @@
         <item name="cornerSizeTopRight">0dp</item>
     </style>
 
+    <!-- Новая подписка - поле для ввода названия подписки -->
+    <style name="textLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@drawable/new_sub_box_stroke</item>
+        <item name="android:textColorHint">@color/Gray_30</item>
+    </style>
 
+    <!-- скругление для иконки новой подписки -->
+    <style name="new_sub_icon_shape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+
+    <style name="new_sub_icon_background">
+        <item name="android:backgroundTint">@color/Gray_30</item>
+    </style>
 </resources>
