Рефакторинг компонентов пользовательского интерфейса: Обновлены макеты, стили и переименованы файлы отрисовки для согласованности
Переработаны и переименованы файлы drawable (shape_button_*) для большей ясности и согласованности.
Обновлены несколько XML-файлов макетов для улучшения дизайна и согласованности нижних листов (fragment_*_bottom_sheet.xml).
Добавлены новые ресурсы множественного числа для правильного именования периодов (plurals.xml).
Изменены и добавлены новые классы для работы с BottomSheetDialogs (CategoryBottomSheetFragment.kt, CommentBottomSheet.kt, PaymentPeriodBottomSheet.kt).
Обновлены темы и цвета в соответствии с новым дизайном пользовательского интерфейса (colors.xml, styles.xml, themes.xml).
Извлечен повторяющийся код в AddSubCreateFragment.kt для улучшения сопровождаемости кода.

Refactor UI Components: Updated layouts, styles, and renamed drawable files for consistency

Refactored and renamed drawable files (shape_button_*) for better clarity and consistency.
Updated several layout XML files to improve the design and consistency of bottom sheets (fragment_*_bottom_sheet.xml).
Added new plural resources for correct period naming (plurals.xml).
Modified and added new classes for handling BottomSheetDialogs (CategoryBottomSheetFragment.kt, CommentBottomSheet.kt, PaymentPeriodBottomSheet.kt).
Updated themes and colors to align with the new UI design (colors.xml, styles.xml, themes.xml).
Extracted repetitive code in AddSubCreateFragment.kt to improve code maintainability.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -198,12 +198,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/shape_button_22dp_gray55"
+                android:background="@drawable/shape_22dp_gray55"
                 android:minHeight="32dp"
                 android:text="See your budget"
                 android:textAllCaps="false"
                 android:textColor="@color/White"
                 android:textStyle="bold"
+                app:backgroundTint="@color/Gray_65"
                 app:layout_constraintEnd_toEndOf="@+id/end_border_upcard"
                 app:layout_constraintStart_toStartOf="@+id/start_border_upcard"
                 app:layout_constraintTop_toBottomOf="@+id/monthBills" />
