--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="Gray_10">#E0E0E6</color>
     <color name="White">#FFFFFF</color>
 
+    <color name="Gray_95">#060606</color>
     <color name="Gray_75">#282832</color>
     <color name="Gray_65">#30303c</color>
     <color name="Gray_62">#3F3F4F</color>
