--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,4 +93,22 @@
     <style name="new_sub_icon_background">
         <item name="android:backgroundTint">@color/Gray_30</item>
     </style>
+
+
+    <!-- Кастомный стиль для DatePickerDialog -->
+    <style name="CustomDatePickerDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <!-- Цвет кнопки "ОК" и "Отмена" -->
+        <item name="colorPrimary">@color/Accent_P_100</item>
+        <!-- Цвет текста кнопок -->
+    </style>
+
+    <!-- Стиль для BottomSheetDialog-->
+    <style name="BottomSheetDialogResizeStyle" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
+
+    <!-- Стиль для NumberPicker в выборе периода подписки-->
+    <style name="AppTheme.Picker" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="android:textColorPrimary">@color/Gray_30</item>
+    </style>
 </resources>
