--- a/app/src/main/res/layout/fragment_details_sub.xml
+++ b/app/src/main/res/layout/fragment_details_sub.xml
@@ -12,12 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        app:cardBackgroundColor="@color/Gray_65"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:cardBackgroundColor="@color/Gray_65"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,12 +29,12 @@
                 android:id="@+id/back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_down"
-                android:contentDescription="Back"
                 android:layout_marginTop="4dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:contentDescription="Back"
+                android:src="@drawable/ic_arrow_down"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Заголовок страницы -->
             <TextView
@@ -44,23 +44,23 @@
                 android:layout_height="wrap_content"
                 android:text="Subscription info"
                 android:textColor="@color/Gray_30"
-                app:layout_constraintTop_toTopOf="@id/back_button"
                 app:layout_constraintBottom_toBottomOf="@id/back_button"
-                app:layout_constraintStart_toEndOf="@id/back_button"
                 app:layout_constraintEnd_toStartOf="@id/delete_button"
-                app:layout_constraintHorizontal_bias="0.5" />
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@id/back_button"
+                app:layout_constraintTop_toTopOf="@id/back_button" />
 
             <!-- Кнопка удаления -->
             <ImageButton
                 android:id="@+id/delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_trash"
                 android:layout_marginTop="4dp"
-                android:contentDescription="Delete"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:contentDescription="Delete"
+                android:src="@drawable/ic_trash"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Иконка приложения -->
             <ImageView
@@ -68,11 +68,11 @@
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:layout_marginTop="34dp"
-                android:src="@drawable/logo_spotify"
                 android:contentDescription="App Icon"
-                app:layout_constraintTop_toBottomOf="@id/title"
+                android:src="@drawable/logo_spotify"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
             <!-- Название подписки -->
             <TextView
@@ -84,9 +84,9 @@
                 android:text="Spotify"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/app_icon"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/app_icon" />
 
             <!-- Цена подписки -->
             <TextView
@@ -98,10 +98,10 @@
                 android:layout_marginBottom="22dp"
                 android:text="$5.99"
                 android:textColor="@color/Gray_30"
-                app:layout_constraintTop_toBottomOf="@id/subscription_name"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/subscription_name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -113,9 +113,9 @@
         android:layout_height="2dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/dashed_line_new_sub"
-        app:layout_constraintTop_toBottomOf="@id/top_card"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/top_card" />
 
     <!-- Нижняя карточка с деталями подписки -->
     <com.google.android.material.card.MaterialCardView
@@ -123,12 +123,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        app:cardBackgroundColor="@color/Gray_65"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:cardBackgroundColor="@color/Gray_65"
-        app:layout_constraintTop_toBottomOf="@id/dashed_line"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/dashed_line">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -140,12 +140,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:background="@color/Accent_P_100"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="8dp"
-                android:background="@color/Accent_P_100"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -160,8 +160,8 @@
                         android:text="Name"
                         android:textColor="@color/white"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/name_value"
@@ -170,8 +170,8 @@
                         android:text="Spotify"
                         android:textColor="@color/Gray_30"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toTopOf="@id/name_label"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/name_label" />
 
                     <TextView
                         android:id="@+id/description_label"
@@ -181,8 +181,8 @@
                         android:text="Description"
                         android:textColor="@color/white"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toBottomOf="@id/name_label"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/name_label" />
 
                     <TextView
                         android:id="@+id/description_value"
@@ -192,8 +192,8 @@
                         android:text="Music app"
                         android:textColor="@color/Gray_30"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toBottomOf="@id/name_value"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/name_value" />
 
                     <!-- Другие элементы (категория, первая оплата и т.д.) можно добавить таким же образом -->
 
@@ -205,19 +205,18 @@
                 android:id="@+id/save_button"
                 android:layout_width="310dp"
                 android:layout_height="wrap_content"
-                android:text="Save"
                 android:layout_marginTop="8dp"
-                android:textColor="@color/White"
-                android:background="@drawable/shape_button_24dp_gray55"
+                android:background="@drawable/shape_24dp"
                 android:elevation="8dp"
+                android:text="Save"
+                android:textColor="@color/White"
                 app:backgroundTint="@color/Accent_P_100"
-                app:layout_constraintTop_toBottomOf="@id/details_card_inside"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/details_card_inside" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
