--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -103,12 +103,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/shape_button_22dp_gray55"
+        android:background="@drawable/shape_22dp_gray55"
         android:minHeight="32dp"
         android:text="Edit profile"
         android:textAllCaps="false"
         android:textColor="@color/White"
         android:textStyle="bold"
+        app:backgroundTint="@color/Gray_65"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_email" />
