--- a/app/src/main/res/drawable/shape_bottom_14dp.xml
+++ b/app/src/main/res/drawable/shape_bottom_14dp.xml
@@ -4,7 +4,11 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/Gray_55"/>
-            <corners android:radius="14dp" />
+            <corners
+                android:topLeftRadius="14dp"
+                android:topRightRadius="14dp"
+                android:bottomLeftRadius="0dp"
+                android:bottomRightRadius="0dp"/>
         </shape>
     </item>
 </layer-list>
