Добавлены плейсхолдеры состояния экрана поиска

--- a/app/src/main/res/layout/fragment_add_sub_create.xml
+++ b/app/src/main/res/layout/fragment_add_sub_create.xml
@@ -151,7 +151,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/shape_bottom_14dp"
+                android:background="@drawable/shape_14dp"
+                app:cardElevation="8dp"
                 android:backgroundTint="@color/Accent_P_100"
                 android:clickable="true"
                 android:text="Валюта"
